--- a/css/one-page-wonder.css
+++ b/css/one-page-wonder.css
@@ -1,23 +1,39 @@
-/*!
- * Start Bootstrap - One Page Wonder HTML Template (http://startbootstrap.com)
- * Code licensed under the Apache License v2.0.
- * For details, see http://www.apache.org/licenses/LICENSE-2.0.
- */
 
 body {
-    margin-top: 50px; /* Required padding for .navbar-fixed-top. Remove if using .navbar-static-top. Change if height of navigation changes. */
+    margin-top: 5px; /* Required padding for .navbar-fixed-top. Remove if using .navbar-static-top. Change if height of navigation changes. */
 }
 
-.header-image {
-    display: block;
-    width: 100%;
-    text-align: center;
-    background: url('http://placehold.it/1900x500') no-repeat center center scroll;
-    -webkit-background-size: cover;
-    -moz-background-size: cover;
-    background-size: cover;
-    -o-background-size: cover;
+
+#logo-main{
+    margin-left:350px;
+    float: left;
+    z-index: -1;
 }
+
+header > h1{ 
+ margin-top:100px;
+ font-size: 50px;
+ font-weight:bold;
+ display: inline-block
+}
+
+header > h2 {
+    display: inline-block;
+    margin-left: -2px;
+    font-size:40px;
+    font-weight:bold;
+}
+
+header > h3{
+    margin-top:-5px;
+    padding 10px;
+        
+} 
+
+header > h4 {
+    padding-bottom: 40px;
+}
+
 
 .headline {
     padding: 120px 0;
